Fix the backdrop-filter on Safari

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ button {
     background: linear-gradient(315deg, rgba(218, 240, 254, 0.90) 0%, rgba(255, 255, 255, 0.70) 100%);
     box-shadow: 0px 6.650102138519287px 5.32008171081543px 0px rgba(114, 114, 114, 0.03), 0px 12.521552085876465px 10.017241477966309px 0px rgba(114, 114, 114, 0.04), 0px 22.3363094329834px 17.869047164916992px 0px rgba(114, 114, 114, 0.04), 0px 41.777610778808594px 33.422088623046875px 0px rgba(114, 114, 114, 0.05), 0px 100px 80px 0px rgba(114, 114, 114, 0.07), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .display-container {
